--- a/src/main/resources/static/sass/imports/footer.scss
+++ b/src/main/resources/static/sass/imports/footer.scss
@@ -1,9 +1,5 @@
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
+  flex-shrink: 0;
   height: 20px;
   padding: 5px 10px 0;
 
