--- a/src/main/resources/static/sass/imports/header.scss
+++ b/src/main/resources/static/sass/imports/header.scss
@@ -1,4 +1,5 @@
 header {
+  flex-shrink: 0;
   height: 80px;
   background-color: $duckEggBlue;
 
