--- a/src/main/resources/static/sass/imports/layout.scss
+++ b/src/main/resources/static/sass/imports/layout.scss
@@ -3,9 +3,12 @@ html {
 }
 
 body {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
   margin: 0;
+}
+
+#reactRoot {
+  height: 100%;
 }
 
 @mixin absolutely-centered {
